--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atih-uva",
+  "name": "societal-ai",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,8 @@
     "build": "sass scss/main.scss:css/main.css --style compressed",
     "server": "http-server -p 8080 -c-1",
     "dev": "browser-sync start --server --files \"css/*.css, *.html, js/*.js, components/*.html, pages/*.html\" --browser \"brave\"",
-    "start": "npm-run-all --parallel sass:watch dev"
+    "start": "npm-run-all --parallel sass:watch dev",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,scss,html}\""
   },
   "keywords": [],
   "author": "",
@@ -19,8 +20,9 @@
     "sass": "^1.86.3"
   },
   "devDependencies": {
-    "http-server": "^14.1.1",
     "browser-sync": "^3.0.2",
-    "npm-run-all": "^4.1.5"
+    "http-server": "^14.1.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.6.2"
   }
 }
